fixed: product count width overflow in firefox

--- a/app/stylesheets/templates/vancl.sass
+++ b/app/stylesheets/templates/vancl.sass
@@ -83,7 +83,7 @@ body
       font-weight: bold
       color: $color_red
     #product_count
-      margin: 0 5px
+      margin: 0 4px
     .pay_btn
       float: right
       background-image: image_url($image_pay)
